--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  equatable: ^2.0.5
+  flutter_riverpod: ^2.3.2 
+  cloud_firestore: ^4.5.0
+  firebase_core: ^2.9.0
+  firebase_auth: ^4.4.0
+  firebase_ui_auth: ^1.2.0
   provider:
+  flutter_quill: ^6.4.4
+  
 
 dev_dependencies:
   flutter_test:
