--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  flutter_datetime_picker: ^1.5.1
+  curved_navigation_bar: ^1.0.3
   kartal: ^2.8.0
+  firebase_ui_localizations: ^1.2.0
   equatable: ^2.0.5
   flutter_riverpod: ^2.3.2 
   cloud_firestore: ^4.5.0
@@ -70,8 +73,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
+  assets:
+    - assets/
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
