--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+
   flutter_datetime_picker: ^1.5.1
   curved_navigation_bar: ^1.0.3
   kartal: ^2.8.0
@@ -46,6 +47,9 @@ dependencies:
   firebase_auth: ^4.4.0
   firebase_ui_auth: ^1.2.0
   flutter_quill: ^7.1.2
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+  percent_indicator: ^3.4.0
   provider:
   
   
