--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,9 +50,27 @@ dependencies:
   hive: ^2.2.3
   hive_flutter: ^1.1.0
   percent_indicator: ^3.4.0
+  flutter_launcher_icons: ^0.13.0
   provider:
   
   
+flutter_icons:
+  android: true
+  ios: true
+  image_path: "assets/akademi_asistanim_app_logo.png"
+  min_sdk_android: 19 # android min sdk min:16, default 21
+  web:
+    generate: true
+    image_path: "assets/akademi_asistanim_app_logo.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+  windows:
+    generate: true
+    image_path: "assets/akademi_asistanim_app_logo.png"
+    icon_size: 48 # min:48, max:256, default: 48
+  macos:
+    generate: true
+    image_path: "assets/akademi_asistanim_app_logo.png"
 
 dev_dependencies:
   flutter_test:
@@ -64,6 +82,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
