--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,6 @@
-
+*.css linguist-detectable=false
+*.cpp linguist-detectable=false
+*.html linguist-detectable=false
+*.swift linguist-detectable=false
+*.cmake linguist-detectable=false
+*c linguist-detectable=false
