--- a/.gitattributes
+++ b/.gitattributes
@@ -3,4 +3,4 @@
 *.html linguist-detectable=false
 *.swift linguist-detectable=false
 *.cmake linguist-detectable=false
-*c linguist-detectable=false
+*.c linguist-detectable=false
