--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 *.swift linguist-detectable=false
 *.cmake linguist-detectable=false
 *.c linguist-detectable=false
+*.txt linguist-detectable=false
+*.h linguist-detectable=false
